# ayra-briefing-package-viewer

./: .gitignore  AUTHORING.md  FEATURE_REQUESTS.md  README.md  pyproject.toml
ayra_package_viewer/: __init__.py  __main__.py  builder.py  classification-levels.json
ayra_package_viewer/instructions/: __init__.py  authoring.md  markdown-patterns.md
examples/board-briefing/: 00-start-here.md  board-briefing-viewer.html  build-instructions.html  package-viewer.json
examples/board-briefing/financials/: 00-sample.md
examples/board-briefing/references/: 00-sample.md  01-sample.md
examples/board-briefing/resolutions/: 01-resolution-index.md  02-sample-resolution.md  03-confirm-public-supporting-resolution.md
examples/board-briefing/updates/: 01-executive-update.md  02-member-proposal.md
skills/build-briefing-package/: SKILL.md
skills/build-briefing-package/references/: markdown-patterns.md
templates/: resolution-index.md  resolution.md
